test/corpus/expressions.txt
===========================================================================================
identifiers
===========================================================================================

foo
bar9
underscore_separated
héllø
_
_bar9
_héllø
@main

---

(module
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (meta
    (meta_id)))

===========================================================================================
comma_separated_single_line_2
===========================================================================================

true, false

---

(module
  (comma_separated
    (true)
    (false)))

===========================================================================================
comma_separated_single_line_3
===========================================================================================

foo, 'bar', 123

---

(module
  (comma_separated
    (identifier)
    (string
      (string_quote)
      (string_content)
      (string_quote))
    (number)))

===========================================================================================
comma_separated_single_line_4
===========================================================================================

'hello', a, 123, b

---

(module
  (comma_separated
    (string
      (string_quote)
      (string_content)
      (string_quote))
    (identifier)
    (number)
    (identifier)))

===========================================================================================
semicolon_separated
===========================================================================================

true; false
a, b, c; 1, 2, 3

---

(module
  (true)
  (false)
  (comma_separated
    (identifier)
    (identifier)
    (identifier))
  (comma_separated
    (number)
    (number)
    (number)))

===========================================================================================
binary_ops
===========================================================================================

1 + 2 * 3 - 4
w + x * y - z
10 % 2 ^ 3

---

(module
  (binary_op
    (binary_op
      (number)
      (binary_op
        (number)
        (number)))
    (number))
  (binary_op
    (binary_op
      (identifier)
      (binary_op
        (identifier)
        (identifier)))
    (identifier))
  (binary_op
    (number)
    (binary_op
      (number)
      (number))))

===========================================================================================
binary_op_multi_line_post
===========================================================================================

1 +
  2 *
    3 +
      4

---

(module
  (binary_op
    (number)
    (binary_op
      (number)
      (binary_op
        (number)
        (number)))))

===========================================================================================
binary_op_multi_line_pre
===========================================================================================

1
  + 2
    * 3
  + 4

---

(module
  (binary_op
    (binary_op
      (number)
      (binary_op
        (number)
        (number)))
    (number)))

===========================================================================================
boolean_chain
===========================================================================================

true and foo and false

---

(module
  (boolean_op
    (boolean_op
      (true)
      (identifier))
    (false)))

===========================================================================================
return_indented
===========================================================================================

return
  foo

---

(module
  (return
    (identifier)))

===========================================================================================
yield_indented
===========================================================================================

yield
  foo

---

(module
  (yield
    (identifier)))

===========================================================================================
debug
===========================================================================================

debug foo
debug 1 + 1
debug x, y

---

(module
  (debug
    (identifier))
  (debug
    (binary_op
      (number)
      (number)))
  (debug
    (comma_separated
      (identifier)
      (identifier))))
